@@ -515,7 +515,7 @@ void DownloadManager::on(AdcCommand::STA, UserConnection* aSource, const AdcComm
 	}
 
 	const string& err = cmd.getParameters()[0];
-	if(err.length() < 3) {
+	if(err.length() != 3) {
 		aSource->disconnect();
 		return;
 	}
@@ -533,6 +533,10 @@ void DownloadManager::on(AdcCommand::STA, UserConnection* aSource, const AdcComm
 			noSlots(aSource);
 			return;
 		}
+	case AdcCommand::SEV_SUCCESS:
+		// We don't know any messages that would give us these...
+		dcdebug("Unknown success message %s %s", err.c_str(), cmd.getParam(1).c_str());
+		return;
 	}
 	aSource->disconnect();
 }
