@@ -818,8 +818,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 0,7,0,3
- PRODUCTVERSION 0,7,0,3
+ FILEVERSION 0,7,0,4
+ PRODUCTVERSION 0,7,0,4
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -836,12 +836,12 @@ BEGIN
         BEGIN
             VALUE "Comments", "http://dcplusplus.sourceforge.net"
             VALUE "FileDescription", "DC++"
-            VALUE "FileVersion", "0, 7, 0, 3"
+            VALUE "FileVersion", "0, 7, 0, 4"
             VALUE "InternalName", "DC++"
             VALUE "LegalCopyright", "Copyright 2001-2006 Jacek Sieka"
             VALUE "OriginalFilename", "DCPlusPlus.exe"
             VALUE "ProductName", "DC++"
-            VALUE "ProductVersion", "0, 7, 0, 3"
+            VALUE "ProductVersion", "0, 7, 0, 4"
         END
     END
     BLOCK "VarFileInfo"
